Added graphics to Lacquergame placeholder page

--- a/index.html
+++ b/index.html
@@ -2,9 +2,35 @@
 <html>
 <head>
 	<title>Lacquer: From Dreams To Ice</title>
+    <style type="text/css">
+     .title {
+		 height: 100%;
+		 }
+		 .wrapper {
+		 	min-height: 100%;
+		 	height: auto !important; /* This line and the next line are not necessary unless you need IE6 support */
+		 	height: 100%;
+		 	margin: 0 auto -155px; /* the bottom margin is the negative value of the footer's height */
+		 }
+		 .footer, .push {
+		 	height: 155px; /* .push must be the same height as .footer */
+			img {
+			    vertical-align: top;
+			}
+			img {
+			    vertical-align: bottom;
+			}
+			
+     }
+
+     .author {
+         color: gray;
+     }
+     </style>
 </head>
 <body>
-	
+	<bgcolor="#0376a4">
+	<body background="graphics/lacquerlake.png" behavior="fixed">
 	<!-- put content stuff here -->
 	
 	<script>
