Fixed bgcolor & body tags by switching to CSS on <body>

--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
      }
      </style>
 </head>
-<body>
-	<bgcolor="#0376a4">
-	<body background="graphics/lacquerlake.png" behavior="fixed">
+<body style="background: #0376a4 url('graphics/lacquerlake.png') repeat-x top center" behavior="fixed">
 	<!-- put content stuff here -->
 	
 	<script>
