--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
      </style>
 </head>
 <body style="background: #0376a4 url('graphics/lacquerlake.png') repeat-x top center" behavior="fixed">
-	<!-- put content stuff here -->
+	<img src="graphics/lacquer_web.png" style="display: block; margin: 0 auto;"/>
 	
 	<script>
 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
