--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
 <body style="background: #0376a4 url('graphics/lacquerlake.png') repeat-x top center" behavior="fixed">
 	<img src="graphics/lacquer_web.png" style="display: block; margin: 0 auto;"/>
 	
+	<div style="margin-top: 450px;">
+		<img src="graphics/vskide_mini.png" style="display: block; float: left; margin-right: -128px;"/>
+		<img src="graphics/comingsoon.png" style="display: block; margin: 0 auto;"/>
+	</div>
+	
 	<script>
 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
