Added link to Versus Kids logo

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<img src="graphics/lacquer_web.png" style="display: block; margin: 0 auto;"/>
 	
 	<div style="margin-top: 450px;">
-		<img src="graphics/vskide_mini.png" style="display: block; float: left; margin-right: -128px;"/>
+		<a href="http://versuskids.com/"><img src="graphics/vskide_mini.png" style="display: block; float: left; margin-right: -128px;"/></a>
 		<img src="graphics/comingsoon.png" style="display: block; margin: 0 auto;"/>
 	</div>
 	
