--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
 ga('create', {trackingId: 'UA-48870305-4', cookieDomain: 'auto', alwaysSendReferrer: true});
+ga('require', 'displayfeatures');
 ga('send', 'pageview');
 	</script>
 </body>
