Added lines from Sara Minisquero's VO script
• Added the lines from “Script 2014-10-09.txt” (the revised version of the script we recorded with on 2014-10-09) as `<div class="">`s within `<div class="container">`s, grouped into `<section>`s.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,38 @@
 
 
 
-<h1>Hello, world!</h1>
+<section>
+	<div class="container">
+		<div class="">Oh, there you are.  I missed you.</div>
+	</div>
+	<div class="container">
+		<div class="">
+			You know what I've been thinking a lot about lately?<br>
+			The stars.
+		</div>
+	</div>
+	<div class="container">
+		<div class="">
+			The constellations were named by the ancient Greeks…<br>
+			and those stars are still there,<br>
+			as bright as they always have been.
+		</div>
+	</div>
+</section>
+<section>
+	<div class="container">
+		<div class="">
+			The constellations were named by the ancient Greeks…<br>
+			and those stars are still there,<br>
+			as bright as they always have been.
+		</div>
+	</div>
+</section>
+<section>
+	<div class="container">
+		<div class="">Lacquer: From Dreams To Ice</div>
+	</div>
+</section>
 
 
 
