--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 		<title>Basic Bootstrap Template</title>
 		
 		<!-- Bootstrap -->
-		<link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-		<link href="css/non-responsive.css" rel="stylesheet" type="text/css">
+		<link href="css/styles.css" rel="stylesheet" type="text/css">
 		
 		<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
