Added the rest of the Script 2014-10-09 text
• I accidentally repeated the “The constellations were named by the ancient Greeks…” line instead of including the full recording script.  It's in there now.

--- a/index.html
+++ b/index.html
@@ -41,9 +41,20 @@
 <section>
 	<div class="container">
 		<div class="">
-			The constellations were named by the ancient Greeks…<br>
-			and those stars are still there,<br>
-			as bright as they always have been.
+			I want to leave my mark somehow, so no one ever forgets my dream:<br>
+			To shine like a star, A dazzling light, Against a cold backdrop.
+		</div>
+	</div>
+	<div class="container">
+		<div class="">
+			my story:<br>
+			Fulfilling my dreams of skating not just for myself but for everyone.
+		</div>
+	</div>
+	<div class="container">
+		<div class="">
+			my constellation:<br>
+			My mark on this lake, my canvas, my piece of the world.
 		</div>
 	</div>
 </section>
