Added `screenheight-*` classes to each <section>/.container
• Added `screenheight-*` to each of index.html's Bootstrap containers.
	• And added to each <section> with a height totaling all of its child containers.
• Also added debug `background-color`s to each of the <section>s.

--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
 
 
 
-<section>
-	<div class="container">
+<section class="screenheight-200" style="background-color: #fc3;">
+	<div class="container screenheight-100">
 		<div class="">Oh, there you are.  I missed you.</div>
 	</div>
-	<div class="container">
+	<div class="container screenheight-50">
 		<div class="">
 			You know what I've been thinking a lot about lately?<br>
 			The stars.
 		</div>
 	</div>
-	<div class="container">
+	<div class="container screenheight-50">
 		<div class="">
 			The constellations were named by the ancient Greeks…<br>
 			and those stars are still there,<br>
@@ -38,28 +38,28 @@
 		</div>
 	</div>
 </section>
-<section>
-	<div class="container">
+<section class="screenheight-150" style="background-color: #c3f;">
+	<div class="container screenheight-50">
 		<div class="">
 			I want to leave my mark somehow, so no one ever forgets my dream:<br>
 			To shine like a star, A dazzling light, Against a cold backdrop.
 		</div>
 	</div>
-	<div class="container">
+	<div class="container screenheight-50">
 		<div class="">
 			my story:<br>
 			Fulfilling my dreams of skating not just for myself but for everyone.
 		</div>
 	</div>
-	<div class="container">
+	<div class="container screenheight-50">
 		<div class="">
 			my constellation:<br>
 			My mark on this lake, my canvas, my piece of the world.
 		</div>
 	</div>
 </section>
-<section>
-	<div class="container">
+<section class="screenheight-100" style="background-color: #3fc;">
+	<div class="container screenheight-100">
 		<div class="">Lacquer: From Dreams To Ice</div>
 	</div>
 </section>
