Minor: Added “Leave your mark this winter.”
• Added “Leave your mark this winter.” as a <div> under the “Lacquer: …” <div>.

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 <section class="screenheight-100" style="background-color: #3fc;">
 	<div class="container screenheight-100">
 		<div class="">Lacquer: From Dreams To Ice</div>
+		<div class="">Leave your mark this winter.</div>
 	</div>
 </section>
 
