--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
 
-<section class="screenheight-200" style="background-color: #fc3;">
+<section id="sky-phase" class="screenheight-200">
 	<div class="container screenheight-100">
 		<div class="">Oh, there you are.  I missed you.</div>
 	</div>
@@ -38,7 +38,7 @@
 		</div>
 	</div>
 </section>
-<section class="screenheight-150" style="background-color: #c3f;">
+<section id="ambitions-phase" class="screenheight-150">
 	<div class="container screenheight-50">
 		<div class="">
 			I want to leave my mark somehow, so no one ever forgets my dream:<br>
@@ -58,7 +58,7 @@
 		</div>
 	</div>
 </section>
-<section class="screenheight-100" style="background-color: #3fc;">
+<section id="title-phase" class=" screenheight-100">
 	<div class="container screenheight-100">
 		<div class="">Lacquer: From Dreams To Ice</div>
 		<div class="">Leave your mark this winter.</div>
