Added starfield .backs to page
• Added 4 `<div class="back"></div>` elements inside the #sky-phase section, each with a id numbered from #starfield1 to #starfield4.
• Created a `.starfield` class and `#starfield1`-`4` id CSS to set the background-repeat, background-images, and starting opacities (#1 at 25%, #4 at 50%, the others at 0%).
	• Made `.phase` position: relative, and made .back elements directly under it position: absolute with 100% width & height.
		» Pos: relative can cause other layout problems here and there.  So far, this seems to be working fine.  I'll have to keep an eye on it.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
 
 
 <section id="sky-phase" class="screenheight-200">
+	<div id="starfield1" class="back"></div>
+	<div id="starfield2" class="back"></div>
+	<div id="starfield3" class="back"></div>
+	<div id="starfield4" class="back"></div>
+	
 	<div class="container screenheight-100">
 		<div class="">Oh, there you are.  I missed you.</div>
 	</div>
