Minor: Changed `screenheight-` to `vh-`
• Changed the `.generate-screenheights()` call to create classes with the prefix `vh-` (formerly the default of `screenheight-`).
	» Newer CSS3 supports a `vh` unit which is exactly this— 100vh is the viewport's height.  So we might as well use the same naming for our class.
	» It's nice and short too.
	• Updated index.html with the changed class names.

--- a/index.html
+++ b/index.html
@@ -20,22 +20,22 @@
 
 
 
-<section id="sky-phase" class="screenheight-200">
+<section id="sky-phase" class="vh-200">
 	<div id="starfield1" class="back"></div>
 	<div id="starfield2" class="back"></div>
 	<div id="starfield3" class="back"></div>
 	<div id="starfield4" class="back"></div>
 	
-	<div class="container screenheight-100">
+	<div class="container vh-100">
 		<div class="">Oh, there you are.  I missed you.</div>
 	</div>
-	<div class="container screenheight-50">
+	<div class="container vh-50">
 		<div class="">
 			You know what I've been thinking a lot about lately?<br>
 			The stars.
 		</div>
 	</div>
-	<div class="container screenheight-50">
+	<div class="container vh-50">
 		<div class="">
 			The constellations were named by the ancient Greeks…<br>
 			and those stars are still there,<br>
@@ -43,28 +43,28 @@
 		</div>
 	</div>
 </section>
-<section id="ambitions-phase" class="screenheight-150">
-	<div class="container screenheight-50">
+<section id="ambitions-phase" class="vh-150">
+	<div class="container vh-50">
 		<div class="">
 			I want to leave my mark somehow, so no one ever forgets my dream:<br>
 			To shine like a star, A dazzling light, Against a cold backdrop.
 		</div>
 	</div>
-	<div class="container screenheight-50">
+	<div class="container vh-50">
 		<div class="">
 			my story:<br>
 			Fulfilling my dreams of skating not just for myself but for everyone.
 		</div>
 	</div>
-	<div class="container screenheight-50">
+	<div class="container vh-50">
 		<div class="">
 			my constellation:<br>
 			My mark on this lake, my canvas, my piece of the world.
 		</div>
 	</div>
 </section>
-<section id="title-phase" class=" screenheight-100">
-	<div class="container screenheight-100">
+<section id="title-phase" class="vh-100">
+	<div class="container vh-100">
 		<div class="">Lacquer: From Dreams To Ice</div>
 		<div class="">Leave your mark this winter.</div>
 	</div>
