Fix: Mobile scrolling
• Turned off skrollr's mobile support by supplying a `mobileCheck` config option which always returns false.
	» Skrollr's mobile solution sucks— the scrolling feels linear and uncomfortable, causes a bunch of other layout issues (white margin on right, #title-phase collapses), and its doesn't work with fixed-attachment backgrounds.  There are better ways to solve this.
	» Currently works great for iOS 8; in iOS ≤7, just jumps the scroll position after the release glide has settled to a stop (the same issues encountered with playground.6.slippyd.com).

--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
 		<script src="bower_components/skrollr-stylesheets/dist/skrollr.stylesheets.min.js"></script>
 		<script src="bower_components/skrollr/dist/skrollr.min.js"></script>
 		<!--[if lt IE 9]><script type="text/javascript" src="bower_components/skrollr-ie/dist/skrollr.ie.min.js"></script><![endif]-->
-		<script>var s = skrollr.init({ edgeStrategy: 'ease' });</script>
+		<script>
+var s = skrollr.init({ mobileCheck: function () { return false; };, edgeStrategy: 'ease' });
+		</script>
 	</body>
 </html>
