Added Google webfonts
• Added the recommended <link> tag to index.html for Google-hosted fonts Oswald, Indie Flower, and Dancing Script.
• Added a `monologue` class to main.less styled to 50px Dancing Script.
	• Added the `monologue` class to each of the monologue text <divs> in index.html.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		
 		<!-- Bootstrap -->
 		<link href="css/styles.css" rel="stylesheet" type="text/css" data-skrollr-stylesheet>
+		<link href='http://fonts.googleapis.com/css?family=Oswald:400,300|Indie+Flower|Dancing+Script:400,700' rel="stylesheet" type="text/css">
 		
 		<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -27,16 +28,16 @@
 	<div id="starfield4" class="back"><div class="back image"></div></div>
 	
 	<div class="container vh-100">
-		<div class="">Oh, there you are.  I missed you.</div>
+		<div class="monologue">Oh, there you are.  I missed you.</div>
 	</div>
 	<div class="container vh-50">
-		<div class="">
+		<div class="monologue">
 			You know what I've been thinking a lot about lately?<br>
 			The stars.
 		</div>
 	</div>
 	<div class="container vh-50">
-		<div class="">
+		<div class="monologue">
 			The constellations were named by the ancient Greeks…<br>
 			and those stars are still there,<br>
 			as bright as they always have been.
@@ -45,19 +46,19 @@
 </section>
 <section id="ambitions-phase" class="vh-150">
 	<div class="container vh-50">
-		<div class="">
+		<div class="monologue">
 			I want to leave my mark somehow, so no one ever forgets my dream:<br>
 			To shine like a star, A dazzling light, Against a cold backdrop.
 		</div>
 	</div>
 	<div class="container vh-50">
-		<div class="">
+		<div class="monologue">
 			my story:<br>
 			Fulfilling my dreams of skating not just for myself but for everyone.
 		</div>
 	</div>
 	<div class="container vh-50">
-		<div class="">
+		<div class="monologue">
 			my constellation:<br>
 			My mark on this lake, my canvas, my piece of the world.
 		</div>
