Fix: Skrollr `forceHeight: false`
• Added the `forceHeight: false` option to Skrollr to get it to not mess with our DOM.
	• Removed the earlier html/body height 100% `!important` override.

--- a/index.html
+++ b/index.html
@@ -81,7 +81,11 @@
 		<script src="bower_components/skrollr/dist/skrollr.min.js"></script>
 		<!--[if lt IE 9]><script type="text/javascript" src="bower_components/skrollr-ie/dist/skrollr.ie.min.js"></script><![endif]-->
 		<script>
-var s = skrollr.init({ mobileCheck: function () { return false; };, edgeStrategy: 'ease' });
+var s = skrollr.init({
+	mobileCheck: function () { return false; },
+	edgeStrategy: 'ease',
+	forceHeight: false
+});
 		</script>
 	</body>
 </html>
