Added unscaleBackgrounds() to index.html
The unscaleBackgrounds() function is used to ensure the skyphase's back images stay zoomed to be pixel-for-pixel(/point) with the screen.

• Added a new `unscaleBackgrounds()` function, which takes a jQuery elements object and an object for storing change-checking last-state vars, and calculates the current page scale level (pinch-scale, not text size scale), and applies the inverse scale to the given objects.
	» Checks if the `layoutViewportWidth` and `visualViewportWidth` are within a certain small difference betwen each other, and if so assumes a scale of 1.0.  This is a hack because Firefox seems to consistently give us values 12 away from each other.  The difference is configurable, stored in `$unscaleBackgrounds_closeEnoughDifference`.
• Added a jQuery document ready function that creates a persistent `$lastState_unscaleSkyBackImage` object, wraps up the call to `unscaleBackgrounds()` into a `unscaleSkyBackImages()` lambda, and calls it once right away and sets it up to run on the `scroll` and `resize` events.

--- a/index.html
+++ b/index.html
@@ -166,5 +166,38 @@ var s = skrollr.init({
 	}
 });
 		</script>
+		<script>
+var $unscaleBackgrounds_closeEnoughDifference = 20;
+function unscaleBackgrounds(jQElements, lastStateObject) {
+	// according to: http://www.quirksmode.org/mobile/viewports2.html
+	var layoutViewportWidth = document.documentElement.clientWidth;
+	var visualViewportWidth = window.innerWidth;
+	var screenWidth = screen.width;
+	if (layoutViewportWidth == lastStateObject.layoutViewportWidth && visualViewportWidth == lastStateObject.visualViewportWidth) {
+		return;
+	} else {
+		lastStateObject.layoutViewportWidth = layoutViewportWidth;
+		lastStateObject.visualViewportWidth = visualViewportWidth;
+	}
+	
+	var isCloseEnoguhToAssume1To1Scale = Math.abs(visualViewportWidth - layoutViewportWidth) < $unscaleBackgrounds_closeEnoughDifference;
+	var viewportInverseZoom = isCloseEnoguhToAssume1To1Scale ? 1.0 : (visualViewportWidth / layoutViewportWidth);
+	if (viewportInverseZoom == lastStateObject.viewportInverseZoom)
+		return;
+	else
+		lastStateObject.viewportInverseZoom = viewportInverseZoom;
+	
+	jQElements.css({ zoom: viewportInverseZoom });
+}
+
+$(document).ready(function() {
+	$lastState_unscaleSkyBackImages = {};
+	var unscaleSkyBackImages = function () {
+		unscaleBackgrounds($('#sky-phase > .back.image, #sky-phase > .back .image'), $lastState_unscaleSkyBackImages);
+	};
+	unscaleSkyBackImages();
+	$(window).on('scroll resize', unscaleSkyBackImages);
+});
+		</script>
 	</body>
 </html>
