Fix: Stars rendering over text
Stars were rendering over text; setting first-level .back elements to have a z-index of -1 (they're already relative positioned) puts them behind the rest of the phase's content.  Since that would also put them behind the phase's background itself, moved the background to a fill sub-element.

• Added a new `.back.fill` div as the first element in each phase.
• Added CSS to `.phase > .back` to have z-index -1.
• Moved each `#…-phase`'s background-color and gradient into a `> .fill` sub-selector.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
 
 <section id="sky-phase" class="vh-200">
+	<div class="back fill"></div>
 	<div id="starfield1" class="back"><div class="back image"></div></div>
 	<div id="starfield2" class="back"><div class="back image"></div></div>
 	<div id="starfield3" class="back"><div class="back image"></div></div>
@@ -45,6 +46,8 @@
 	</div>
 </section>
 <section id="ambitions-phase" class="vh-150">
+	<div class="back fill"></div>
+	
 	<div class="container vh-50">
 		<div class="monologue">
 			I want to leave my mark somehow, so no one ever forgets my dream:<br>
@@ -65,6 +68,8 @@
 	</div>
 </section>
 <section id="title-phase" class="vh-100">
+	<div class="back fill"></div>
+	
 	<div class="container vh-100">
 		<div class="">Lacquer: From Dreams To Ice</div>
 		<div class="">Leave your mark this winter.</div>
