--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ var accelDecelSkrollrEasing = function (progress, domElement, propertyName, targ
 };
 
 
-var s = skrollr.init({
+var $s = skrollr.init({
 	mobileCheck: function () { return false; },
 	edgeStrategy: 'ease',
 	forceHeight: false,
