Fixed-position sky back (finally)
This is necessary since iOS devices don't react to fixed-position backgrounds in the same way, and fixed backgrounds limit us to just `background`s, excluding positioning via `absolute` `top`, `transform` `translateY`, `canvas`/`svg`, or others.

I hadn't been able to get this working yet because Skrollr was mis-calculating its keyframes and stopping the transition early.  Skrollr's dynamic constants let me base starfield animations off of the viewport position of its containing phase.

• All of sky-phase's .back divs (fill and starfields) wrapped in a new .back.fill div.
	• New `&.fixed` (under .phase's .back) CSS sets the `position` to be `fixed`.
		» Selector evaluates to `.phase > .back.fixed, .phase > .back .back.fixed`, and the same for each `#…-phase` id.
• Removed `fixed` from each of the starfield's `background`s.
• New Skrollr constants in the form of `(sky|ambitions|title)_phase_(start|center|end)` to supply document positions of each phase to the `@-skrollr-keyframes` keyframes.
	• New `get*PhaseScroll*()` functions to get the scroll center of the start, center, and end of each phase, for use by the dynamic constants.
• Moved `> .fill` CSS to `&.fill` under each phase's `> .back { &, & .back {` in order to have it keep working while excluding any non-phase back (any element with .back that isn't under a .back directly under the phase).
Fill specificity

--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
 
 
 <section id="sky-phase" class="vh-200">
-	<div class="back fill"></div>
-	<div id="starfield1" class="back"><div class="back image"></div></div>
-	<div id="starfield2" class="back"><div class="back image"></div></div>
-	<div id="starfield3" class="back"><div class="back image"></div></div>
-	<div id="starfield4" class="back"><div class="back image"></div></div>
+	<div class="back fixed">
+		<div class="back fill"></div>
+		<div id="starfield1" class="back"><div class="back image"></div></div>
+		<div id="starfield2" class="back"><div class="back image"></div></div>
+		<div id="starfield3" class="back"><div class="back image"></div></div>
+		<div id="starfield4" class="back"><div class="back image"></div></div>
+	</div>
 	
 	<div class="container vh-100">
 		<div class="monologue">Oh, there you are.  I missed you.</div>
@@ -161,6 +163,52 @@ var accelDecelSkrollrEasing = function (progress, domElement, propertyName, targ
 };
 
 
+function getSkyPhaseScrollStart() {
+	var skyPhaseScrollStart = skrollr.get().relativeToAbsolute($('#sky-phase')[0], 'top', 'top');
+	console.log("skyPhaseScrollStart: "+skyPhaseScrollStart);
+	return skyPhaseScrollStart;
+}
+function getSkyPhaseScrollCenter() {
+	var skyPhaseScrollCenter = skrollr.get().relativeToAbsolute($('#sky-phase')[0], 'top', 'center');
+	console.log("skyPhaseScrollCenter: "+skyPhaseScrollCenter);
+	return skyPhaseScrollCenter;
+}
+function getSkyPhaseScrollEnd() {
+	var skyPhaseScrollEnd = skrollr.get().relativeToAbsolute($('#sky-phase')[0], 'top', 'bottom');
+	console.log("skyPhaseScrollEnd: "+skyPhaseScrollEnd);
+	return skyPhaseScrollEnd;
+}
+function getAmbitionsPhaseScrollStart() {
+	var ambitionsPhaseScrollStart = skrollr.get().relativeToAbsolute($('#ambitions-phase')[0], 'bottom', 'top');
+	console.log("ambitionsPhaseScrollStart: "+ambitionsPhaseScrollStart);
+	return ambitionsPhaseScrollStart;
+}
+function getAmbitionsPhaseScrollCenter() {
+	var ambitionsPhaseScrollCenter = skrollr.get().relativeToAbsolute($('#ambitions-phase')[0], 'center', 'center');
+	console.log("ambitionsPhaseScrollCenter: "+ambitionsPhaseScrollCenter);
+	return ambitionsPhaseScrollCenter;
+}
+function getAmbitionsPhaseScrollEnd() {
+	var ambitionsPhaseScrollEnd = skrollr.get().relativeToAbsolute($('#ambitions-phase')[0], 'top', 'bottom');
+	console.log("ambitionsPhaseScrollEnd: "+ambitionsPhaseScrollEnd);
+	return ambitionsPhaseScrollEnd;
+}
+function getTitlePhaseScrollStart() {
+	var titlePhaseScrollStart = skrollr.get().relativeToAbsolute($('#title-phase')[0], 'bottom', 'top');
+	console.log("titlePhaseScrollStart: "+titlePhaseScrollStart);
+	return titlePhaseScrollStart;
+}
+function getTitlePhaseScrollCenter() {
+	var titlePhaseScrollCenter = skrollr.get().relativeToAbsolute($('#title-phase')[0], 'center', 'center');
+	console.log("titlePhaseScrollCenter: "+titlePhaseScrollCenter);
+	return titlePhaseScrollCenter;
+}
+function getTitlePhaseScrollEnd() {
+	var titlePhaseScrollEnd = skrollr.get().relativeToAbsolute($('#title-phase')[0], 'top', 'bottom');
+	console.log("titlePhaseScrollEnd: "+titlePhaseScrollEnd);
+	return titlePhaseScrollEnd;
+}
+
 var $s = skrollr.init({
 	mobileCheck: function () { return false; },
 	edgeStrategy: 'ease',
@@ -168,6 +216,17 @@ var $s = skrollr.init({
 	smoothScrolling: false,
 	easing: {
 		accelDecel: accelDecelSkrollrEasing
+	},
+	constants: {
+		sky_phase_start: getSkyPhaseScrollStart,
+		sky_phase_center: getSkyPhaseScrollCenter,
+		sky_phase_end: getSkyPhaseScrollEnd,
+		ambitions_phase_start: getAmbitionsPhaseScrollStart,
+		ambitions_phase_center: getAmbitionsPhaseScrollCenter,
+		ambitions_phase_end: getAmbitionsPhaseScrollEnd,
+		title_phase_start: getTitlePhaseScrollStart,
+		title_phase_center: getTitlePhaseScrollCenter,
+		title_phase_end: getTitlePhaseScrollEnd,
 	}
 });
 		</script>
